<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_search"
    android:paddingLeft="@dimen/header_margin"
    android:paddingRight="@dimen/header_margin">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:gravity="center"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recommend"
        android:textSize="@dimen/nav_radio_size"
        android:textColor="@color/default_color"
        android:gravity="center"
        android:text="@string/str_recommend"
        android:layout_marginLeft="@dimen/nav_radio_margin"
        android:layout_marginRight="@dimen/nav_radio_margin"
        android:background="@drawable/bg_type_select"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tuokouxiu"
        android:textSize="@dimen/nav_radio_size"
        android:textColor="@color/default_color"
        android:gravity="center"
        android:text="@string/str_tuokouxiu"
        android:layout_marginLeft="@dimen/nav_radio_margin"
        android:layout_marginRight="@dimen/nav_radio_margin"
        android:background="@null"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shishang"
        android:textSize="@dimen/nav_radio_size"
        android:textColor="@color/default_color"
        android:gravity="center"
        android:text="@string/str_shishang"
        android:layout_marginLeft="@dimen/nav_radio_margin"
        android:layout_marginRight="@dimen/nav_radio_margin"
        android:background="@null"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zhubo"
        android:textSize="@dimen/nav_radio_size"
        android:textColor="@color/default_color"
        android:gravity="center"
        android:text="@string/str_zhubo"
        android:layout_marginLeft="@dimen/nav_radio_margin"
        android:layout_marginRight="@dimen/nav_radio_margin"
        android:background="@null"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paihang"
        android:textSize="@dimen/nav_radio_size"
        android:textColor="@color/default_color"
        android:gravity="center"
        android:text="@string/str_paihang"
        android:layout_marginLeft="@dimen/nav_radio_margin"
        android:layout_marginRight="@dimen/nav_radio_margin"
        android:background="@null"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        />



</LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_radio_line"
        />


    <com.dsn.andy.bgmlauncher.recycleview.MyRecyclerView
        android:id="@+id/albums"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@null"
        android:scrollbars="none" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffffff"
                android:textSize="@dimen/middle_size"
                android:text="@string/str_dsn_recommend"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_radio_prev"
                    android:layout_marginRight="0dp"
                    />
                <ImageView
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_radio_next"
                    android:layout_marginLeft="0dp"
                    />


            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffffff"
                android:textSize="@dimen/middle_size"
                android:text="@string/str_radio_paihang"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />

            <Button
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_radio_more"
                android:textColor="#ffffffff"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/str_more"
                />

        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_radio_line"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            >

            <ListView

                android:id="@+id/recommend_radio_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="@drawable/adapter_selector2"
                >

            </ListView>


            </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ListView

                android:id="@+id/paihang_radio_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="@drawable/adapter_selector2"
                >

            </ListView>

            </RelativeLayout>

        </LinearLayout>





</LinearLayout>


