<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_smarthome"
    android:orientation="vertical"
    android:padding="40dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/str_common_setting"
            android:textColor="@color/default_color"
            android:textSize="@dimen/title_size" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/set_abount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/set_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/str_about_device"
            android:textColor="@color/default_color"
            android:textSize="16sp" />


        <TextView
            android:visibility="invisible"
            android:id="@+id/sn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/default_color2"
            android:textSize="16sp" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/set_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/str_update"
            android:textColor="@color/default_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_awaken"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/set_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/str_sm_awaken"
            android:textColor="@color/default_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_awaken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="允许唤醒"
            android:textColor="@color/default_color2"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_smarthome485_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/set_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/str_sm485_setting"
            android:textColor="@color/default_color"
            android:textSize="16sp" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_smarthome485_enable"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/set_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/str_sm485_enable"
            android:textColor="@color/default_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_smarthome485_enable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="支持"
            android:textColor="@color/default_color2"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_smarthome_enable"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/set_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/str_sm_enable"
            android:textColor="@color/default_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_smarthome_enable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="支持"
            android:textColor="@color/default_color2"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_smarthome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/set_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/str_sm_setting"
            android:textColor="@color/default_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_arrow" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/set_advanced_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/set_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/str_sm_moresetting"
            android:textColor="@color/default_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_arrow" />

    </LinearLayout>
</LinearLayout>


